@@ -97,6 +97,7 @@ static cpp_hashnode *lex_macro_node	PARAMS ((cpp_reader *));
 static void do_include_common	PARAMS ((cpp_reader *, enum include_type));
 static void do_pragma_once	PARAMS ((cpp_reader *));
 static void do_pragma_poison	PARAMS ((cpp_reader *));
+static void do_pragma_sdcc_hash PARAMS ((cpp_reader *));
 static void do_pragma_system_header	PARAMS ((cpp_reader *));
 static void do_pragma_dependency	PARAMS ((cpp_reader *));
 static int get__Pragma_string	PARAMS ((cpp_reader *, cpp_token *));
@@ -1025,6 +1026,9 @@ _cpp_init_internal_pragmas (pfile)
   cpp_register_pragma (pfile, "GCC", "poison", do_pragma_poison);
   cpp_register_pragma (pfile, "GCC", "system_header", do_pragma_system_header);
   cpp_register_pragma (pfile, "GCC", "dependency", do_pragma_dependency);
+    
+  /* Kevin abuse for SDCC. */
+  cpp_register_pragma(pfile, 0, "sdcc_hash", do_pragma_sdcc_hash);
 }
 
 static void
@@ -1124,6 +1128,28 @@ do_pragma_poison (pfile)
   if (tok.type == CPP_EOF && pfile->cb.poison)
     (*pfile->cb.poison) (pfile);
 #endif
+}
+
+static void
+do_pragma_sdcc_hash (pfile)
+     cpp_reader *pfile;
+{
+    cpp_token tok;
+    cpp_hashnode *hp;
+
+    _cpp_lex_token (pfile, &tok);
+    if (tok.type == CPP_PLUS)
+    {
+	CPP_OPTION(pfile, allow_naked_hash)++;
+    }
+    else if (tok.type == CPP_MINUS)
+    {
+	CPP_OPTION(pfile, allow_naked_hash)--;	
+    }
+    else
+    {
+	cpp_error (pfile, "invalid #pragma sdcc_hash directive, need '+' or '-'");
+    }
 }
 
 /* Mark the current header as a system header.  This will suppress
